[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptlib"
version = "0.0.2"
description = "Library for ECC and CRYSTALS-Kyber KEM"
authors = [{name = "Rysker"}]
license = "MIT"
requires-python = ">=3.9"

dependencies = [
    "pqcrypto>=0.3.4",
]

[tool.setuptools.packages.find]
where = ["."]
